[package]
name = "wit-bindgen-wrpc-cli"
version = "0.1.3"
description = "WebAssembly component-native RPC framework based on WIT"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/wrpc/wit-bindgen-wrpc"

[workspace]
members = ["crates/*", "examples/rust/*"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tracing = { workspace = true, features = ["attributes"] }
wit-bindgen-core = { workspace = true }
wit-bindgen-wrpc = { workspace = true }
wit-bindgen-wrpc-go = { workspace = true, features = ["clap"] }
wit-bindgen-wrpc-rust = { workspace = true, features = ["clap"] }
wrpc-cli = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
tokio = { workspace = true, features = ["process"] }
wit-bindgen-wrpc = { workspace = true }
wrpc-cli = { workspace = true, features = ["nats"] }
wrpc-transport-nats = { workspace = true }

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
async-nats = { version = "0.33", default-features = false }
async-trait = { version = "0.1", default-features = false }
bitflags = { version = "2", default-features = false }
bytes = { version = "1", default-features = false }
clap = { version = "4", default-features = false }
futures = { version = "0.3", default-features = false }
heck = { version = "0.5", default-features = false }
leb128 = { version = "0.2", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = ["printing"] }
test-helpers = { default-features = false, path = "./crates/test-helpers" }
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tower = { version = "0.4", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
url = { version = "2", default-features = false }
wasmparser = { version = "0.207", default-features = false }
wit-bindgen = { version = "0.24", default-features = false }
wit-bindgen-core = { version = "0.24", default-features = false }
wit-bindgen-wrpc = { version = "0.3.6", default-features = false, path = "./crates/wit-bindgen" }
wit-bindgen-wrpc-go = { version = "0.1.1", default-features = false, path = "./crates/wit-bindgen-go" }
wit-bindgen-wrpc-rust = { version = "0.3.3", default-features = false, path = "./crates/wit-bindgen-rust" }
wit-bindgen-wrpc-rust-macro = { version = "0.3.4", default-features = false, path = "./crates/wit-bindgen-rust-macro" }
wit-component = { version = "0.202", default-features = false }
wit-parser = { version = "0.202", default-features = false }
wrpc-cli = { version = "0.1", default-features = false }
wrpc-transport = { version = "0.24.3", default-features = false }
wrpc-transport-nats = { version = "0.21", default-features = false }
